fixed responsive issue for FGProfile on mobile landscape & portait

--- a/app/components/Profile/profile.module.css
+++ b/app/components/Profile/profile.module.css
@@ -14,16 +14,23 @@
     margin: auto 0;
     z-index: -50;
     grid-column: 2;
-    grid-row: 2 / 3;
+    grid-row: 1 / 3;
     transition: all 200ms ease;
+    max-width: 500px;
+    justify-self: center;
+    padding: 1rem;
 }
 
 .textbox {
     /* "absolute" in order to not affect the size of profile img */
     position: absolute;
-    top: 100px;
     padding: 1rem;
     transition: all 200ms ease;
+    grid-row: 1;
+    grid-column: 1 / 3;
+    padding-top: 3rem;
+    left: 0rem;
+    top: 3rem;
 }
 
 .textbox h1 {
@@ -76,17 +83,15 @@
     .textbox {
         font-size: xx-large;
         padding-left: 5rem;
+        top: 0rem;
     }
 
     .textbox h1 {
         font-size: x-large
     }
-}
 
-@media (min-width: 1024px) {
     .profile {
-        transform: scale(1.5);
-        top: 1rem;
+        grid-row: 2 / 4;
     }
 }
 
